--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -16,7 +16,7 @@ bdb = business dashboard;
   </head>
   <body>
     <header class="alt_bdb_header">
-      <div class="container-xxl">
+      <div class="container-custom">
         <div class="row align-items-center">
           <div class="col-lg-2 position-relative">
             <div
@@ -909,7 +909,7 @@ bdb = business dashboard;
     <!-- notification canvas end -->
 
     <main class="main_section">
-      <div class="container-xxl">
+      <div class="container-custom">
         <div class="row">
           <!-- sidebar start -->
           <div
@@ -1099,7 +1099,7 @@ bdb = business dashboard;
                   </h4>
                   <!-- badge  -->
                   <div
-                    class="alt_bdb_badge d-flex align-items-center gap-2 btn rounded-pill"
+                    class="alt_bdb_badge d-flex align-items-center gap-2 rounded-pill"
                   >
                     <span
                       class="badge rounded-circle p-1 bg-danger border-2 border-danger"
@@ -1120,23 +1120,14 @@ bdb = business dashboard;
                       class="project_list_avater d-flex align-items-center gap-2"
                     >
                       <img src="https://via.placeholder.com/32x32" alt="" />
-                      <h5 class="text-capitalize">
-                        <strong>Abel Marshal</strong>
-                      </h5>
+                      <h5 class="fs-6 text-capitalize">Abel Marshal</h5>
                     </div>
-                    <div class="dots"></div>
-                    <div class="milestone">
-                      <h5>
-                        <span class="me-2">
-                          <i class="fa-solid fa-bag-shopping"></i>
-                        </span>
-                        Milestone 1
-                      </h5>
-                    </div>
-                    <div class="dots"></div>
+
                     <div class="time">
-                      <span>
-                        <span><i class="fa-regular fa-clock"></i></span>
+                      <span class="text-alt-text-gray-clr">
+                        <span class="text-alt-text-gray-clr">
+                          <i class="fa-regular fa-clock"></i>
+                        </span>
                         2 hours ago
                       </span>
                     </div>
@@ -1162,7 +1153,7 @@ bdb = business dashboard;
                   </h4>
                   <!-- badge  -->
                   <div
-                    class="alt_bdb_badge d-flex align-items-center gap-2 btn rounded-pill"
+                    class="alt_bdb_badge d-flex align-items-center gap-2 rounded-pill"
                   >
                     <span
                       class="badge rounded-circle p-1 bg-danger border-2 border-danger"
@@ -1183,9 +1174,7 @@ bdb = business dashboard;
                       class="project_list_avater d-flex align-items-center gap-2"
                     >
                       <img src="https://via.placeholder.com/32x32" alt="" />
-                      <h5 class="text-capitalize">
-                        <strong>Abel Marshal</strong>
-                      </h5>
+                      <h5 class="fs-6 text-capitalize">Abel Marshal</h5>
                     </div>
                     <div class="dots"></div>
                     <div class="milestone">
@@ -1220,7 +1209,7 @@ bdb = business dashboard;
                   </h4>
                   <!-- badge  -->
                   <div
-                    class="alt_bdb_badge d-flex align-items-center gap-2 btn rounded-pill"
+                    class="alt_bdb_badge d-flex align-items-center gap-2 rounded-pill"
                   >
                     <span
                       class="badge rounded-circle p-1 bg-warning border-2 border-warning"
@@ -1241,9 +1230,7 @@ bdb = business dashboard;
                       class="project_list_avater d-flex align-items-center gap-2"
                     >
                       <img src="https://via.placeholder.com/32x32" alt="" />
-                      <h5 class="text-capitalize">
-                        <strong>Abel Marshal</strong>
-                      </h5>
+                      <h5 class="fs-6 text-capitalize">Abel Marshal</h5>
                     </div>
                     <div class="dots"></div>
                     <div class="milestone">
@@ -1278,7 +1265,7 @@ bdb = business dashboard;
                   </h4>
                   <!-- badge  -->
                   <div
-                    class="alt_bdb_badge d-flex align-items-center gap-2 btn rounded-pill"
+                    class="alt_bdb_badge d-flex align-items-center gap-2 rounded-pill"
                   >
                     <span
                       class="badge rounded-circle p-1 bg-warning border-2 border-warning"
@@ -1299,9 +1286,7 @@ bdb = business dashboard;
                       class="project_list_avater d-flex align-items-center gap-2"
                     >
                       <img src="https://via.placeholder.com/32x32" alt="" />
-                      <h5 class="text-capitalize">
-                        <strong>Abel Marshal</strong>
-                      </h5>
+                      <h5 class="fs-6 text-capitalize">Abel Marshal</h5>
                     </div>
                     <div class="dots"></div>
                     <div class="milestone">
@@ -1336,7 +1321,7 @@ bdb = business dashboard;
                   </h4>
                   <!-- badge  -->
                   <div
-                    class="alt_bdb_badge d-flex align-items-center gap-2 btn rounded-pill"
+                    class="alt_bdb_badge d-flex align-items-center gap-2 rounded-pill"
                   >
                     <span
                       class="badge rounded-circle p-1 bg-info border-2 border-info"
@@ -1357,9 +1342,7 @@ bdb = business dashboard;
                       class="project_list_avater d-flex align-items-center gap-2"
                     >
                       <img src="https://via.placeholder.com/32x32" alt="" />
-                      <h5 class="text-capitalize">
-                        <strong>Abel Marshal</strong>
-                      </h5>
+                      <h5 class="fs-6 text-capitalize">Abel Marshal</h5>
                     </div>
                     <div class="dots"></div>
                     <div class="milestone">
@@ -1408,12 +1391,10 @@ bdb = business dashboard;
               <div class="row gy-3">
                 <!--  -->
                 <div class="col col-sm-6 col-lg-4">
-                  <div
-                    class="telant_content_wrapper border border-secondary-subtle"
-                  >
+                  <div class="telant_content_wrapper">
                     <div class="talent_content position-relative text-center">
                       <span
-                        class="ratting btn-alt-outline border border-light-subtle py-1 px-1 rounded-pill"
+                        class="ratting btn-alt-outline border-0 py-1 px-1 rounded-pill"
                       >
                         <span class="">
                           <img
@@ -1423,26 +1404,28 @@ bdb = business dashboard;
                           />
                         </span>
                       </span>
-                      <div class="talent_img pb-3">
+                      <div class="talent_img mb-3">
                         <img
                           src="https://via.placeholder.com/74x74"
                           class="rounded-circle"
                           alt=""
                         />
                       </div>
-                      <h3 class="pb-2">John Doe</h3>
+                      <h3 class="">John Doe</h3>
                       <h4 class="pb-3">UI/UX designer</h4>
                       <button
-                        class="btn-alt-outline border border-light-subtle bg-white rounded-pill"
+                        class="btn-alt-outline fw-semibold py-1 px-2 border border-light-subtle bg-white rounded-pill"
                       >
-                        <strong>$45 / Hour</strong>
+                        $45 / Hour
                       </button>
                       <div class="rising_start mt-3">
                         <button
-                          class="btn-alt-outline text-white border border-light-subtle rounded-pill"
+                          class="btn-alt-outline fw-semibold px-2 py-1 text-white border border-light-subtle rounded-pill"
                         >
-                          <span>
+                          <span class="position-relative">
                             <img
+                              width="16"
+                              height="16"
                               src="../../assets/images/business-dashboard/Star.svg"
                               alt=""
                             />
@@ -1471,12 +1454,10 @@ bdb = business dashboard;
                 <!--  -->
                 <!--  -->
                 <div class="col col-sm-6 col-lg-4">
-                  <div
-                    class="telant_content_wrapper border border-secondary-subtle"
-                  >
+                  <div class="telant_content_wrapper">
                     <div class="talent_content position-relative text-center">
                       <span
-                        class="ratting btn-alt-outline border border-light-subtle py-1 px-1 rounded-pill"
+                        class="ratting btn-alt-outline border-0 py-1 px-1 rounded-pill"
                       >
                         <span class="">
                           <img
@@ -1486,26 +1467,29 @@ bdb = business dashboard;
                           />
                         </span>
                       </span>
-                      <div class="talent_img pb-3">
+                      <div class="talent_img mb-3">
                         <img
                           src="https://via.placeholder.com/74x74"
                           class="rounded-circle"
                           alt=""
                         />
                       </div>
-                      <h3 class="pb-2">John Doe</h3>
+                      <h3 class="">John Doe</h3>
                       <h4 class="pb-3">UI/UX designer</h4>
                       <button
-                        class="btn-alt-outline border border-light-subtle bg-white rounded-pill"
+                        class="btn-alt-outline fw-semibold py-1 px-2 border border-light-subtle bg-white rounded-pill"
                       >
-                        <strong>$45 / Hour</strong>
+                        $45 / Hours
                       </button>
                       <div class="rising_start mt-3">
                         <button
                           class="btn-alt-outline text-white border border-light-subtle rounded-pill"
                         >
-                          <span>
+                          <span class="position-relative">
                             <img
+                              class="position-relative"
+                              width="16"
+                              height="16"
                               src="../../assets/images/business-dashboard/Star.svg"
                               alt=""
                             />
@@ -1534,12 +1518,10 @@ bdb = business dashboard;
                 <!--  -->
                 <!--  -->
                 <div class="col col-sm-6 col-lg-4">
-                  <div
-                    class="telant_content_wrapper border border-secondary-subtle"
-                  >
+                  <div class="telant_content_wrapper">
                     <div class="talent_content position-relative text-center">
                       <span
-                        class="ratting btn-alt-outline border border-light-subtle py-1 px-1 rounded-pill"
+                        class="ratting btn-alt-outline border-0 py-1 px-1 rounded-pill"
                       >
                         <span class="">
                           <img
@@ -1549,26 +1531,29 @@ bdb = business dashboard;
                           />
                         </span>
                       </span>
-                      <div class="talent_img pb-3">
+                      <div class="talent_img mb-3">
                         <img
                           src="https://via.placeholder.com/74x74"
                           class="rounded-circle"
                           alt=""
                         />
                       </div>
-                      <h3 class="pb-2">John Doe</h3>
+                      <h3 class="">John Doe</h3>
                       <h4 class="pb-3">UI/UX designer</h4>
                       <button
-                        class="btn-alt-outline border border-light-subtle bg-white rounded-pill"
+                        class="btn-alt-outline fw-semibold py-1 px-2 border border-light-subtle bg-white rounded-pill"
                       >
-                        <strong>$45 / Hour</strong>
+                        $45 / Hours
                       </button>
                       <div class="rising_start mt-3">
                         <button
                           class="btn-alt-outline text-white border border-light-subtle rounded-pill"
                         >
-                          <span>
+                          <span class="position-relative">
                             <img
+                              class="position-relative"
+                              width="16"
+                              height="16"
                               src="../../assets/images/business-dashboard/Star.svg"
                               alt=""
                             />
@@ -1721,9 +1706,7 @@ bdb = business dashboard;
                     >
                       <div class="avatar d-flex gap-2 align-items-center">
                         <img src="https://via.placeholder.com/32x32" alt="" />
-                        <h5 class="text-capitalize">
-                          <strong>Abel Marshal</strong>
-                        </h5>
+                        <h5 class="fs-6 text-capitalize">Abel Marshal</h5>
                       </div>
                       <div class="dots"></div>
                       <div class="closing_time">
@@ -1757,9 +1740,7 @@ bdb = business dashboard;
                     >
                       <div class="avatar d-flex gap-2 align-items-center">
                         <img src="https://via.placeholder.com/32x32" alt="" />
-                        <h5 class="text-capitalize">
-                          <strong>Abel Marshal</strong>
-                        </h5>
+                        <h5 class="fs-6 text-capitalize">Abel Marshal</h5>
                       </div>
                       <div class="dots"></div>
                       <div class="closing_time">
@@ -1793,9 +1774,7 @@ bdb = business dashboard;
                     >
                       <div class="avatar d-flex gap-2 align-items-center">
                         <img src="https://via.placeholder.com/32x32" alt="" />
-                        <h5 class="text-capitalize">
-                          <strong>Abel Marshal</strong>
-                        </h5>
+                        <h5 class="fs-6 text-capitalize">Abel Marshal</h5>
                       </div>
                       <div class="dots"></div>
                       <div class="closing_time">
