bisuness dashboard done

--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -93,7 +93,7 @@ bdb = business dashboard;
               </div>
             </div>
           </div>
-          <div class="col-lg-7 pt-3 pt-lg-0 px-3 px-lg-5">
+          <div class="col-lg-7 pt-3 pt-lg-0 middle_column">
             <div class="wellcome_message d-flex align-items-center">
               <p class="fs-6">
                 Hi, Good evening
@@ -1028,7 +1028,7 @@ bdb = business dashboard;
 
               <!-- create tribe  -->
               <div
-                class="sidebar_wizard wizard_bg d-flex flex-column justify-content-end bg-alt-gray-bg-clr rounded-3 p-2"
+                class="sidebar_wizard wizard_bg d-flex flex-column justify-content-end bg-alt-gray-bg-clr rounded-3 p-2 p-lg-3"
               >
                 <h3 class="">Create a Tribe</h3>
                 <p class="">
@@ -1043,7 +1043,7 @@ bdb = business dashboard;
           </div>
           <!-- sidebar left end -->
 
-          <div class="col-lg-7 px-3 px-lg-5">
+          <div class="col-lg-7 middle_column">
             <!--  -->
             <div
               class="alt_bdb_promo promo_bg mb-5 d-flex flex-column justify-content-start border border-light-subtle"
@@ -1075,6 +1075,8 @@ bdb = business dashboard;
                 class="d-flex gap-2 justify-content-start align-items-center"
               >
                 <img
+                  width="19"
+                  height="19"
                   src="../../assets/images/business-dashboard/Project updates.svg"
                   alt=""
                 />
@@ -1374,6 +1376,8 @@ bdb = business dashboard;
                 class="d-flex gap-2 justify-content-start align-items-center"
               >
                 <img
+                  width="19"
+                  height="19"
                   src="../../assets/images/business-dashboard/tranding.svg"
                   alt=""
                 />
