upto bisuness feed pages done

--- a/business-landing-page.html
+++ b/business-landing-page.html
@@ -613,7 +613,7 @@
                     </span>
                     <span class="me-2">Star</span>
                   </span>
-                  <div class="talent_img pb-3">
+                  <div class="talent_img">
                     <img
                       src="https://via.placeholder.com/74x74"
                       class="rounded-circle"
@@ -658,7 +658,7 @@
                     </span>
                     <span class="me-2">Superstar</span>
                   </span>
-                  <div class="talent_img pb-3">
+                  <div class="talent_img">
                     <img
                       src="https://i.pravatar.cc/74"
                       class="rounded-circle"
@@ -703,7 +703,7 @@
                     </span>
                     <span class="me-2">Rising star</span>
                   </span>
-                  <div class="talent_img pb-3">
+                  <div class="talent_img">
                     <img
                       src="https://i.pravatar.cc/74"
                       class="rounded-circle"
@@ -748,7 +748,7 @@
                     </span>
                     <span class="me-2">Rising star</span>
                   </span>
-                  <div class="talent_img pb-3">
+                  <div class="talent_img">
                     <img
                       src="https://i.pravatar.cc/74"
                       class="rounded-circle"
