--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -18,7 +18,7 @@ bdb = business dashboard;
     <header class="alt_bdb_header">
       <div class="container-custom container">
         <div class="row align-items-center">
-          <div class="col-lg-2 position-relative">
+          <div class="col-lg-2 position-relative left-column">
             <div
               class="alt_bdb_logo d-flex justify-content-between align-items-lg-start custom-border"
             >
@@ -107,7 +107,7 @@ bdb = business dashboard;
               </p>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 right-column">
             <div
               class="alt_bdb_notification d-none d-lg-flex gap-4 justify-content-end align-items-center"
             >
@@ -913,7 +913,7 @@ bdb = business dashboard;
         <div class="row">
           <!-- sidebar start -->
           <div
-            class="col-lg-2 border-end border-light-subtle d-none d-lg-block"
+            class="col-lg-2 border-end border-light-subtle d-none d-lg-block left-column"
           >
             <aside class="alt_bdb_sidebar">
               <ul class="py-4 border-bottom border-light-subtle">
@@ -1588,7 +1588,7 @@ bdb = business dashboard;
             </div>
           </div>
           <!-- sidebar right  -->
-          <div class="col-lg-3">
+          <div class="col-lg-3 right-column">
             <aside class="alt_bdb_right_sidebar">
               <div class="referal_card mb-5">
                 <h3>
