--- a/business/03-my-projects/my-project-page.html
+++ b/business/03-my-projects/my-project-page.html
@@ -20,11 +20,11 @@ bdb = business dashboard;
   </head>
   <body>
     <header class="alt_bdb_header">
-      <div class="container-xxl">
-        <div class="row">
-          <div class="col-lg-2 border-end border-light-subtle">
+      <div class="container-custom container">
+        <div class="row align-items-center">
+          <div class="col-lg-2 position-relative left-column">
             <div
-              class="alt_bdb_logo d-flex justify-content-between align-items-lg-start"
+              class="alt_bdb_logo d-flex justify-content-between align-items-lg-start custom-border"
             >
               <div class="d-flex flex-row gap-2 align-items-start">
                 <!-- mobile menu bar  -->
@@ -42,7 +42,7 @@ bdb = business dashboard;
                 </button>
                 <!-- logo  -->
                 <div
-                  class="d-flex flex-row flex-lg-column align-items-center align-items-lg-start justify-content-start"
+                  class="position-relative d-flex flex-row flex-lg-column align-items-center align-items-lg-start justify-content-start"
                 >
                   <a href="/#">
                     <img
@@ -51,7 +51,7 @@ bdb = business dashboard;
                     />
                   </a>
                   <!-- role badge  -->
-                  <div class="ms-2 ms-lg-0">
+                  <div class="user-role ms-2 ms-lg-0">
                     <span class="badge rounded-pill text-bg-warning">
                       Business
                     </span>
@@ -97,14 +97,21 @@ bdb = business dashboard;
               </div>
             </div>
           </div>
-          <div class="col-lg-7 pt-3 pt-lg-0">
-            <div class="breadcrumb d-flex ps-2 mt-1 align-items-center">
-              <a href="" class="fs-6">
-                <span class="m-1 fs-5"><strong>My projects</strong></span>
-              </a>
+          <div class="col-lg-7 pt-3 pt-lg-0 middle_column">
+            <div class="wellcome_message d-flex align-items-center">
+              <p class="fs-6">
+                Hi, Good evening
+                <strong>James Jacobe</strong>
+                <span>
+                  <img
+                    src="../../assets/images/business-dashboard/Waving Hand.svg"
+                    alt=""
+                  />
+                </span>
+              </p>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 right-column">
             <div
               class="alt_bdb_notification d-none d-lg-flex gap-4 justify-content-end align-items-center"
             >
@@ -112,7 +119,7 @@ bdb = business dashboard;
               <div class="alt_bdb_header_search position-relative">
                 <form action="">
                   <input
-                    class="position-relative bg-alt-gray-bg-clr border-0"
+                    class="position-relative bg-white border-0"
                     type="text"
                     placeholder="Search"
                   />
@@ -125,12 +132,7 @@ bdb = business dashboard;
                 </form>
               </div>
               <!--  -->
-              <div
-                class="alt_bdb_plus_icon rounded-pill bg-black"
-                type="button"
-                data-bs-toggle="modal"
-                data-bs-target="#createProjectModal"
-              >
+              <div class="alt_bdb_plus_icon rounded-pill bg-black">
                 <img
                   src="../../assets/images/business-dashboard/plus-icons.svg"
                   alt="notification icon"
@@ -167,7 +169,7 @@ bdb = business dashboard;
                   aria-expanded="false"
                 >
                   <img
-                    src="https://via.placeholder.com/32x32"
+                    src="https://placehold.co/32x32"
                     alt="user icon"
                     class="rounded-circle"
                   />
@@ -911,11 +913,11 @@ bdb = business dashboard;
     <!-- notification canvas end -->
 
     <main class="main_section">
-      <div class="container-xxl">
+      <div class="container-custom container">
         <div class="row">
           <!-- sidebar start -->
           <div
-            class="col-12 col-lg-2 border-end border-light-subtle d-none d-lg-block"
+            class="col-12 col-lg-2 border-end border-light-subtle d-none d-lg-block left-column"
           >
             <aside class="alt_bdb_sidebar">
               <ul class="py-4 border-bottom border-light-subtle">
@@ -1030,7 +1032,7 @@ bdb = business dashboard;
 
               <!-- create tribe  -->
               <div
-                class="sidebar_wizard wizard_bg d-flex flex-column justify-content-end bg-alt-gray-bg-clr rounded-3 p-2"
+                class="sidebar_wizard wizard_bg d-flex flex-column justify-content-end bg-alt-gray-bg-clr rounded-3 p-3"
               >
                 <h3 class="">Create a Tribe</h3>
                 <p class="">
@@ -1046,7 +1048,7 @@ bdb = business dashboard;
           <!-- sidebar left end -->
 
           <!-- main content start -->
-          <div class="col-12 col-lg-10 pb-5">
+          <div class="col-lg-7 middle_column">
             <div class="row">
               <!-- filter row  -->
               <div class="col-12 mb-4">
@@ -1284,7 +1286,7 @@ bdb = business dashboard;
                                       class="avatar"
                                       height="96"
                                       width="96"
-                                      src="https://assets.codepen.io/5928893/avatar_jake.jpg"
+                                      src="https://i.pravatar.cc/96"
                                     />
                                   </a>
                                   <a
@@ -1296,7 +1298,7 @@ bdb = business dashboard;
                                       class="avatar"
                                       height="96"
                                       width="96"
-                                      src="https://assets.codepen.io/5928893/avatar_bramus.jpg"
+                                      src="https://i.pravatar.cc/96"
                                     />
                                   </a>
                                   <a
@@ -1307,7 +1309,7 @@ bdb = business dashboard;
                                       alt="Profile image for Una Kravets"
                                       class="avatar"
                                       height="96"
-                                      src="https://assets.codepen.io/5928893/avatar_una.jpg"
+                                      src="https://i.pravatar.cc/96"
                                     />
                                   </a>
                                   <a
@@ -1319,7 +1321,7 @@ bdb = business dashboard;
                                       class="avatar"
                                       height="96"
                                       width="96"
-                                      src="https://assets.codepen.io/5928893/avatar_adam.jpg"
+                                      src="https://i.pravatar.cc/96"
                                     />
                                   </a>
                                 </div>
