--- a/business/05-community/business-community-connections-page.html
+++ b/business/05-community/business-community-connections-page.html
@@ -1189,7 +1189,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
@@ -1253,7 +1253,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
@@ -1317,7 +1317,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
@@ -1391,7 +1391,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
@@ -1455,7 +1455,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
@@ -1519,7 +1519,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
@@ -1593,7 +1593,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
@@ -1657,7 +1657,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
@@ -1721,7 +1721,7 @@ bdb = business dashboard;
                                   />
                                 </span>
                               </span>
-                              <div class="talent_img pb-3">
+                              <div class="talent_img">
                                 <img
                                   src="https://via.placeholder.com/74x74"
                                   class="rounded-circle"
