--- a/freelancer/02-dashboard/freelancer-dashboard.html
+++ b/freelancer/02-dashboard/freelancer-dashboard.html
@@ -16,11 +16,11 @@ fdb = freelancer dashboard;
   </head>
   <body>
     <header class="alt_bdb_header">
-      <div class="container-xxl">
+      <div class="container-custom container">
         <div class="row">
-          <div class="col-lg-2 border-end border-light-subtle">
+          <div class="col-lg-2 position-relative left-column">
             <div
-              class="alt_bdb_logo d-flex justify-content-between align-items-lg-start"
+              class="alt_bdb_logo d-flex justify-content-between align-items-lg-start custom-border"
             >
               <div class="d-flex flex-row gap-2 align-items-start">
                 <!-- mobile menu bar  -->
@@ -38,7 +38,7 @@ fdb = freelancer dashboard;
                 </button>
                 <!-- logo  -->
                 <div
-                  class="d-flex flex-row flex-lg-column align-items-center align-items-lg-start justify-content-start"
+                  class="position-relative d-flex flex-row flex-lg-column align-items-center align-items-lg-start justify-content-start"
                 >
                   <a href="/#">
                     <img
@@ -47,7 +47,7 @@ fdb = freelancer dashboard;
                     />
                   </a>
                   <!-- role badge  -->
-                  <div class="ms-2 ms-lg-0">
+                  <div class="user-role ms-2 ms-lg-0">
                     <span class="badge rounded-pill text-bg-warning">
                       Frelancer
                     </span>
@@ -94,7 +94,7 @@ fdb = freelancer dashboard;
               </div>
             </div>
           </div>
-          <div class="col-lg-7 pt-3 pt-lg-0 px-lg-4">
+          <div class="col-lg-7 pt-3 pt-lg-0 middle_column">
             <div class="wellcome_message d-flex mt-1 align-items-center">
               <p class="fs-6">
                 Hi, Good evening
@@ -108,7 +108,7 @@ fdb = freelancer dashboard;
               </p>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 right-column">
             <div
               class="alt_bdb_notification d-none d-lg-flex gap-4 justify-content-end align-items-center"
             >
@@ -909,11 +909,11 @@ fdb = freelancer dashboard;
     <!-- notification canvas end -->
 
     <main class="main_section">
-      <div class="container-xxl">
+      <div class="container-custom container">
         <div class="row">
           <!-- sidebar start -->
           <div
-            class="col-lg-2 border-end border-light-subtle d-none d-lg-block"
+            class="col-lg-2 border-end border-light-subtle d-none d-lg-block left-column"
           >
             <aside class="alt_bdb_sidebar">
               <ul class="py-4 border-bottom border-light-subtle">
@@ -1028,7 +1028,7 @@ fdb = freelancer dashboard;
 
               <!-- create tribe  -->
               <div
-                class="sidebar_wizard wizard_bg d-flex flex-column justify-content-end bg-alt-gray-bg-clr rounded-3 p-2"
+                class="sidebar_wizard wizard_bg d-flex flex-column justify-content-end bg-alt-gray-bg-clr rounded-3 p-3"
               >
                 <h3 class="">Create a Tribe</h3>
                 <p class="">
@@ -1042,7 +1042,7 @@ fdb = freelancer dashboard;
             </aside>
           </div>
           <!-- sidebar left end -->
-          <div class="col-lg-7 px-lg-4">
+          <div class="col-lg-7 middle_column">
             <!--  -->
             <div
               class="alt_bdb_promo promo_bg mb-5 d-flex flex-column justify-content-start border border-light-subtle"
@@ -1285,7 +1285,7 @@ fdb = freelancer dashboard;
             </div>
           </div>
           <!-- sidebar right  -->
-          <div class="col-lg-3">
+          <div class="col-lg-3 right-column">
             <aside class="alt_bdb_right_sidebar">
               <div class="referal_card mb-5">
                 <h3>
