--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -17,7 +17,7 @@ bdb = business dashboard;
   <body>
     <header class="alt_bdb_header">
       <div class="container-custom container">
-        <div class="row align-items-center justify-content-between">
+        <div class="row">
           <div class="col-lg-2 position-relative left-column">
             <div
               class="alt_bdb_logo d-flex justify-content-between align-items-lg-start custom-border"
@@ -107,7 +107,7 @@ bdb = business dashboard;
               </p>
             </div>
           </div>
-          <div class="col-lg-3 right-column">
+          <div class="col-lg-3 ms-auto right-column">
             <div
               class="alt_bdb_notification d-none d-lg-flex gap-4 justify-content-end align-items-center"
             >
@@ -910,7 +910,7 @@ bdb = business dashboard;
 
     <main class="main_section">
       <div class="container-custom container">
-        <div class="row justify-content-between">
+        <div class="row">
           <!-- sidebar start -->
           <div
             class="col-lg-2 border-end border-light-subtle d-none d-lg-block left-column"
