--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -17,7 +17,7 @@ bdb = business dashboard;
   <body>
     <header class="alt_bdb_header">
       <div class="container-custom container">
-        <div class="row">
+        <div class="row gx-xxl-0">
           <div class="col-lg-2 position-relative left-column">
             <div
               class="alt_bdb_logo d-flex justify-content-between align-items-lg-start custom-border"
@@ -83,7 +83,7 @@ bdb = business dashboard;
                   </div>
                 </div>
                 <button
-                  class="d-none d-lg-block btn bg-light bg-transparent p-0"
+                  class="d-none d-lg-block btn bg-light bg-transparent p-0 pe-xxl-3"
                 >
                   <img
                     src="../../assets/images/business-dashboard/menu_open-icon.svg"
@@ -910,7 +910,7 @@ bdb = business dashboard;
 
     <main class="main_section">
       <div class="container-custom container">
-        <div class="row">
+        <div class="row gx-xxl-0">
           <!-- sidebar start -->
           <div
             class="col-lg-2 border-end border-light-subtle d-none d-lg-block left-column"
