my-project page updated

--- a/business/03-my-projects/my-project-page.html
+++ b/business/03-my-projects/my-project-page.html
@@ -18,7 +18,7 @@ bdb = business dashboard;
     <link rel="stylesheet" href="../../css/bisuness.dashboard.min.css" />
     <title>My Project page</title>
   </head>
-  <body>
+  <body id="project-page">
     <header class="alt_bdb_header">
       <div class="container-custom container">
         <div class="row align-items-center">
