my project page updated

--- a/business/03-my-projects/my-project-page.html
+++ b/business/03-my-projects/my-project-page.html
@@ -111,7 +111,7 @@ bdb = business dashboard;
               </p>
             </div>
           </div>
-          <div class="col-lg-3 right-column">
+          <div class="col-lg-3 ms-auto right-column">
             <div
               class="alt_bdb_notification d-none d-lg-flex gap-4 justify-content-end align-items-center"
             >
