mobile devices is done

--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -11,7 +11,7 @@ bdb = business dashboard;
     <!-- font awesome icons links  -->
 
     <link rel="stylesheet" href="../../assets/fontawesomes/css/all.min.css" />
-    <title>Business Dashboard</title>
+    <title>Business Dashboard 1</title>
     <link rel="stylesheet" href="../../css/common-main.min.css" />
   </head>
   <body>
