--- a/business/03-my-projects/my-project-page.html
+++ b/business/03-my-projects/my-project-page.html
@@ -18,7 +18,7 @@ bdb = business dashboard;
     <link rel="stylesheet" href="../../css/bisuness.dashboard.min.css" />
     <title>My Project page</title>
   </head>
-  <body id="project-page">
+  <body>
     <header class="alt_bdb_header">
       <div class="container-custom container">
         <div class="row align-items-center">
@@ -912,7 +912,7 @@ bdb = business dashboard;
     </div>
     <!-- notification canvas end -->
 
-    <main class="main_section">
+    <main class="main_section" id="main_template">
       <div class="container-custom container">
         <div class="row">
           <!-- sidebar start -->
