added container-fluid class

--- a/business/03-my-projects/my-project-page.html
+++ b/business/03-my-projects/my-project-page.html
@@ -20,7 +20,7 @@ bdb = business dashboard;
   </head>
   <body>
     <header class="alt_bdb_header">
-      <div class="container-custom container">
+      <div class="container-custom container-fluid">
         <div class="row align-items-center">
           <div class="col-lg-2 position-relative left-column">
             <div
@@ -913,7 +913,7 @@ bdb = business dashboard;
     <!-- notification canvas end -->
 
     <main class="main_section" id="main_template">
-      <div class="container-custom container">
+      <div class="container-custom container-fluid">
         <div class="row">
           <!-- sidebar start -->
           <div
