--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -16,7 +16,7 @@ bdb = business dashboard;
   </head>
   <body>
     <header class="alt_bdb_header">
-      <div class="container-custom container">
+      <div class="container-custom container-fluid">
         <div class="row gx-xxl-0">
           <div class="col-lg-2 position-relative left-column">
             <div
@@ -909,7 +909,7 @@ bdb = business dashboard;
     <!-- notification canvas end -->
 
     <main class="main_section">
-      <div class="container-custom container">
+      <div class="container-custom container-fluid">
         <div class="row gx-xxl-0">
           <!-- sidebar start -->
           <div
