--- a/business/03-my-projects/my-project-page.html
+++ b/business/03-my-projects/my-project-page.html
@@ -99,16 +99,7 @@ bdb = business dashboard;
           </div>
           <div class="col-lg-7 pt-3 pt-lg-0 middle_column">
             <div class="wellcome_message d-flex align-items-center">
-              <p class="fs-6">
-                Hi, Good evening
-                <strong>James Jacobe</strong>
-                <span>
-                  <img
-                    src="../../assets/images/business-dashboard/Waving Hand.svg"
-                    alt=""
-                  />
-                </span>
-              </p>
+              <a href="/#" class="fs-6">My Projects</a>
             </div>
           </div>
           <div class="col-lg-3 ms-auto right-column">
